Add integration tests for Consumer, Producer and Streams (#67)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>