@@ -5,18 +5,14 @@
 package io.strimzi.kafka.metrics.integration;
 
 import io.strimzi.kafka.metrics.KafkaPrometheusMetricsReporter;
-import io.strimzi.kafka.metrics.MetricsUtils;
-import io.strimzi.kafka.metrics.PrometheusMetricsReporterConfig;
+import io.strimzi.kafka.metrics.TestUtils;
 import io.strimzi.kafka.metrics.YammerPrometheusMetricsReporter;
-import io.strimzi.kafka.metrics.http.Listener;
 import io.strimzi.test.container.StrimziKafkaContainer;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.testcontainers.utility.MountableFile;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -26,11 +22,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class TestBrokerMetricsIT {
-
-    private static final String VERSION = "1.0.0-SNAPSHOT";
-    private static final String REPORTER_JARS = "target/metrics-reporter-" + VERSION + "/metrics-reporter-" + VERSION + "/libs/";
-    private static final String MOUNT_PATH = "/opt/strimzi/metrics-reporter/";
-    private static final int PORT = Listener.parseListener(PrometheusMetricsReporterConfig.LISTENER_CONFIG_DEFAULT).port;
 
     private Map<String, String> configs;
     private StrimziKafkaContainer broker;
@@ -44,10 +35,10 @@ public class TestBrokerMetricsIT {
         broker = new StrimziKafkaContainer()
                 .withNodeId(0)
                 .withKraft()
-                .withCopyFileToContainer(MountableFile.forHostPath(REPORTER_JARS), MOUNT_PATH)
-                .withExposedPorts(9092, PORT)
+                .withCopyFileToContainer(MountableFile.forHostPath(TestUtils.REPORTER_JARS), TestUtils.MOUNT_PATH)
+                .withExposedPorts(9092, TestUtils.PORT)
                 .withKafkaConfigurationMap(configs)
-                .withEnv(Collections.singletonMap("CLASSPATH", MOUNT_PATH + "*"));
+                .withEnv(Collections.singletonMap("CLASSPATH", TestUtils.MOUNT_PATH + "*"));
     }
 
     @AfterEach
@@ -56,50 +47,44 @@ public class TestBrokerMetricsIT {
     }
 
     @Test
-    public void testMetricsReporter() throws Exception {
+    public void testBrokerMetrics() throws Exception {
         broker.start();
-        List<String> metrics = MetricsUtils.getMetrics(broker.getHost(), broker.getMappedPort(PORT));
-        List<String> prefixes = Arrays.asList(
-                "jvm_",
-                "kafka_controller_",
-                "kafka_coordinator_",
-                "kafka_log_",
-                "kafka_network_",
-                "kafka_server_");
+
+        List<String> prefixes = List.of(
+            "jvm_",
+            "process_",
+            "kafka_controller_",
+            "kafka_coordinator_",
+            "kafka_log_",
+            "kafka_network_",
+            "kafka_server_");
+        List<String> metrics = TestUtils.getMetrics(broker.getHost(), broker.getMappedPort(TestUtils.PORT));
         for (String prefix : prefixes) {
-            assertFalse(filterMetrics(metrics, prefix).isEmpty());
+            assertFalse(TestUtils.filterMetrics(metrics, prefix).isEmpty());
         }
     }
 
     @Test
-    public void testMetricsReporterWithAllowlist() throws Exception {
+    public void testBrokerMetricsWithAllowlist() throws Exception {
         configs.put("prometheus.metrics.reporter.allowlist", "kafka_controller.*,kafka_server.*");
         broker.withKafkaConfigurationMap(configs);
         broker.start();
-        List<String> metrics = MetricsUtils.getMetrics(broker.getHost(), broker.getMappedPort(PORT));
-        List<String> allowedPrefixes = Arrays.asList(
-                "jvm_",
-                "kafka_controller_",
-                "kafka_server_");
-        for (String prefix : allowedPrefixes) {
-            assertFalse(filterMetrics(metrics, prefix).isEmpty());
-        }
-        List<String> disallowPrefixes = Arrays.asList(
-                "kafka_coordinator_",
-                "kafka_log_",
-                "kafka_network_");
-        for (String prefix : disallowPrefixes) {
-            assertTrue(filterMetrics(metrics, prefix).isEmpty());
-        }
-    }
 
-    private List<String> filterMetrics(List<String> allMetrics, String prefix) {
-        List<String> metrics = new ArrayList<>();
-        for (String metric : allMetrics) {
-            if (metric.startsWith(prefix)) {
-                metrics.add(metric);
-            }
+        List<String> metrics = TestUtils.getMetrics(broker.getHost(), broker.getMappedPort(TestUtils.PORT));
+        List<String> allowedPrefixes = List.of(
+            "jvm_",
+            "process_",
+            "kafka_controller_",
+            "kafka_server_");
+        for (String prefix : allowedPrefixes) {
+            assertFalse(TestUtils.filterMetrics(metrics, prefix).isEmpty());
         }
-        return metrics;
+        List<String> disallowPrefixes = List.of(
+            "kafka_coordinator_",
+            "kafka_log_",
+            "kafka_network_");
+        for (String prefix : disallowPrefixes) {
+            assertTrue(TestUtils.filterMetrics(metrics, prefix).isEmpty());
+        }
     }
 }
